Important changes since GBBopen 1.0:

  * New DECF/DELETE-ACONS :gbbopen-tools function


Important changes in GBBopen 1.0:
  
  * Support added for set-composite dimension values and space-instance
    storage of them; support for incomposite (scalar) pattern retrieval of
    set-composite unit instances

  * Added processing of <install-dir>/shared-gbbopen-modules (processed 
    immediately before user's personal <homedir>/gbbopen-modules)

  * Added system-name tagging of extended-REPL commands, directory
    definitions, and module definitions
     - New WITH-SYSTEM-NAME macro added to support this

  * Changes to extended-REPL commands:
     - DEFINE-TLL-COMMAND renamed to DEFINE-REPL-COMMAND (DEFINE-TLL-COMMAND
       is deprecated and will be removed in GBBopen 1.1)
     - New built-in extended-REPL commands:
        :systems   Shows all system-names used in commands, directory 
                   definitions, and module definitions
        :commands [<system-name>] 
                   Shows all extended-REPL commands; if system-name is
                   specified, then only those commands are displayed
        :undefine-system <system-name>
                   Removes all commands, directory definitions, and 
                   module definitions associated with <system-name>

  * Changes to Mini Module system:
     - Added Mini Module support for "Source" and "SOURCE" directory-name
       conventions (in addition to the recommended "source")
     - Added application-version modifier support to DEFINE-ROOT-DIRECTORY
     - New GET-ROOT-DIRECTORY Mini Module function
     - New WITH-MODULE-REDEFINITIONS macro
     - Incremented Mini Module version to 1.3


Important changes in GBBopen 0.9.9:

  * INCOMPATIBLE CHANGE: INSTANCE-DIMENSION-VALUE now returns five values:
      1. the dimension value of the unit instance in the specified dimension
      2. the dimension-value type of the specified dimension
      3. the comparison type of the specified dimension